# Debate-Prep

./: .gitignore  .rustfmt.toml  Cargo.toml  DebatePrep.sln  IN_PROGRESS.md  LICENSE  PRD.md  README.md  README_Phase1.md  clippy.toml  index.html  package.json  pnpm-lock.yaml  tauri.conf.json
.cursor/: rules
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/workflows/: ci.yml
icons/: icon.icns
src/: App.css  App.tsx  styles.css
src-tauri/src/: main.rs
src/DebatePrep/: App.xaml  App.xaml.cs  DebatePrep.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/DebatePrep.Core/: DebatePrep.Core.csproj
src/DebatePrep.Core/Data/: DebatePrepContext.cs
src/DebatePrep.Core/Models/: CritiqueRule.cs  Participant.cs  Session.cs  TokenChunk.cs  Turn.cs
src/DebatePrep.Core/Providers/: HuggingFaceProvider.cs  IModelProvider.cs
src/DebatePrep.Core/Services/: ConfigurationService.cs  CritiqueMemoryService.cs  ExportService.cs  SessionService.cs
tests/DebatePrep.Tests/: DebatePrep.Tests.csproj  SessionServiceTests.cs
tests/Golden/exports/: sample_export.md
