[package]
name = "debate-prep"
version = "0.1.0"
description = "Moderator-controlled multi-agent debate app"
authors = ["Columbia Cloudworks LLC"]
license = "MIT"
repository = "https://github.com/Columbia-Cloudworks-LLC/Debate-Prep"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rusqlite = { version = "0.29", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures-core = "0.3"
async-stream = "0.3"
regex = "1.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Security_Cryptography"] }

# Cross-platform keyring support
keyring = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "debate-prep"
path = "src-tauri/src/main.rs"

[package.metadata.tauri]
bundle = { identifier = "com.columbia-cloudworks.debate-prep" }
